<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <View
            android:id="@+id/view_top"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:background="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageview_arrow_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/desc_arrow_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="@+id/view_top"
            app:layout_constraintTop_toTopOf="@+id/view_top"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/ingredient_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_top"
            app:layout_constraintEnd_toEndOf="@+id/view_top"
            app:layout_constraintStart_toStartOf="@+id/view_top"
            app:layout_constraintTop_toTopOf="@+id/view_top" />

        <ImageView
            android:id="@+id/imageview_timer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/desc_timer"
            android:src="@drawable/ic_timer"
            app:layout_constraintEnd_toStartOf="@+id/imageview_heart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_top"
            app:tint="@color/brown" />

        <ImageView
            android:id="@+id/imageview_heart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/desc_heart"
            android:src="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageview_timer"
            app:layout_constraintTop_toBottomOf="@+id/view_top"
            app:tint="@color/brown" />

        <TextView
            android:id="@+id/textview_15_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/fiften_minutes"
            app:layout_constraintEnd_toEndOf="@+id/imageview_timer"
            app:layout_constraintStart_toStartOf="@+id/imageview_timer"
            app:layout_constraintTop_toBottomOf="@+id/imageview_timer" />

        <TextView
            android:id="@+id/textview_number_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/number_likes"
            app:layout_constraintEnd_toEndOf="@id/imageview_heart"
            app:layout_constraintStart_toStartOf="@id/imageview_heart"
            app:layout_constraintTop_toBottomOf="@id/imageview_heart" />

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_15_minutes" />

        <TextView
            android:id="@+id/recipe_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/recipe_ingredient"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/work_sans_bold"
            android:text="@string/ingredients"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_ingredient" />

        <ImageView
            android:id="@+id/arrow_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc_arrow_right"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            app:tint="@color/brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/express_quantity"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/arrow_right1"
            app:layout_constraintStart_toEndOf="@+id/arrow_right1"
            app:layout_constraintTop_toTopOf="@id/arrow_right1" />

        <ImageView
            android:id="@+id/arrow_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc_arrow_right"
            android:fontFamily="@font/work_sans"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrow_right1"
            app:tint="@color/brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/milk_quantity"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/arrow_right2"
            app:layout_constraintStart_toEndOf="@+id/arrow_right2"
            app:layout_constraintTop_toTopOf="@id/arrow_right2" />

        <ImageView
            android:id="@+id/arrow_right3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/desc_arrow_right"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrow_right2"
            app:tint="@color/brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/work_sans"
            android:text="@string/chocolate_quantity"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/arrow_right3"
            app:layout_constraintStart_toEndOf="@+id/arrow_right3"
            app:layout_constraintTop_toTopOf="@id/arrow_right3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>